added some problematic tests