@@ -59,23 +59,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.11</version>
-                <configuration>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-
-                    <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=128M
-                        -Dhazelcast.version.check.enabled=false
-                        -Dhazelcast.mancenter.enabled=false
-                        -Dhazelcast.elastic.memory.enabled=true
-                        -Dhazelcast.elastic.memory.total.size=128m
-                        -Dhazelcast.elastic.memory.chunk.size=1k
-                    </argLine>
-                </configuration>
-            </plugin>
-
         </plugins>
     </build>
 
